# jxfn

./: .gitignore  build.gradle  gradle.properties  readme.md
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cnn/: .gitignore  3  Makefile  addressofpic  callgrind.out.3425  cnnnet.c  cnnnet.h  connet.c  fileofconfig.h  fileofparameter.c  fileofparameter.h  functioninit.h  funofneurons.c  funofneurons.h  interface.cpp  interface.hpp  learnfromfile.c  main.c  matrix.c  matrix.h  neurons.c  neurons.h  out1  readimage.py  readimage2.py  resulttest.c
app/src/main/pre_process/: .gitignore  Makefile  array_to_image.py  image.cpp  image.hpp  image_to_array.py  outa  test.cpp
app/src/main/res/layout/: app_bar_main.xml  content_main.xml
app/src/main/res/menu/: activity_main_drawer.xml
cpp/: cnnnet.cpp  cnnnet.h  cnnnet.hpp  fileofparameter.cpp  fileofparameter.hpp  functioninit.cpp  functioninit.hpp  funofneurons.cpp  funofneurons.hpp  image.cpp  image.hpp  interface.hpp  jniPreProcess.cpp  matrix.cpp  matrix.hpp  neurons.cpp  neurons.hpp  readimage.py
cpp/charsort/: .gitignore  charsort.cpp  charsort.hpp
cpp/cnn/: cnnnet.c  encode.c  fileofconfig.h  fileofparameter.c  fileofparameter.h  functioninit.c  learnfromfile.c  matrix.c  matrix.h  neurons.c
cpp/jni_test/: CMakeLists.txt  edu_jxfn_jxfn_jni_test.h  helloworld.cpp  main.cpp
cpp/pre_process/: .gitignore  CMakeLists.txt  edu_jxfn_jxfn_PreProcess.h  image.cpp  image.hpp  jniPreProcess.cpp
gradle/wrapper/: gradle-wrapper.properties
jni/pre_process/: merge_grid_test.py
(+9 files in other folders)
